--- a/views/transactions/view_expense.handlebars
+++ b/views/transactions/view_expense.handlebars
@@ -71,7 +71,7 @@
 
                             <div class="edit-buttons">
                                 
-                                <a href="/expenses/editExpense/{{ _id }}">
+                                <a href="/expenses/editExpense/{{expense._id}}">
                                     <button id="delete" type="button" class="btn btn-raised">
                                         EDIT
                                     </button>
