--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -42,7 +42,7 @@
     <div class= "all_buttons" align="center">
       <a href="/expenses/addExpense">  <button id="add_expense" class="btn btn-primary btn-raised" >ADD EXPENSE</button></a> 
       <a href="/income/addIncome"> <button id="add_income" class="btn btn-primary btn-raised" > ADD INCOME</button></a>
-      <a href="#"> <button id="transfer" class="btn btn-primary btn-raised" > TRANSFER</button></a>
+      <a href="/transfer/addNewTransfer"> <button id="transfer" class="btn btn-primary btn-raised" > ADD TRANSFER</button></a>
     </div>
                                 
  <div class="dashboard">
