--- a/views/transactions/add_transfer.handlebars
+++ b/views/transactions/add_transfer.handlebars
@@ -23,15 +23,15 @@
 
                         <div class="card-body">
 
-                          <form>
+                          <form action="/transfer/saveNewTransfer" method="POST">
                                 <div id="field-container" class="input-group">
                                         <span class="input-group-addon"><i id = "field-icon" class="material-icons">monetization_on</i></span>
-                                        <input type="number" step="0.01" class="form-control" placeholder="Enter amount"/>
+                                        <input type="number" step="0.01" name="amount" class="form-control" placeholder="Enter amount"/>
                                 </div>
 
                                 <div id="field-container" class="input-group">
                                         <span class="input-group-addon"><i class="material-icons">description</i></span>
-                                       <input type="text" class="form-control" placeholder="Description"/>
+                                       <input type="text" class="form-control" name="desc" placeholder="Description"/>
                                 </div>
 
 				<table id="field-container">
@@ -41,53 +41,53 @@
 					<tr> 
 						<td> 
 							<div id="field-container" class="input-group">
-                                        <span class="input-group-addon"><i class="material-icons">account_balance</i></span>
-                                    
-                                        <input id="selected_bank_account1" name = "selected_bank_account1" type="text" class="form-control" hidden="true">
+                                                                <span class="input-group-addon"><i class="material-icons">account_balance</i></span>
+                                                        
+                                                                <input id="selected_bank_account1" name = "selected_bank_account1" type="text" class="form-control" hidden="true">
 
-                                         <div class="btn-group">
-                                                <button id="btn-bank-account1" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                  Choose Your bank account
-                                                </button>
-                                                <div id="bank-dropdown-1" class="dropdown-menu">
-                                                        {{#each bank_accounts }}
-                                                                <button type="button" value={{ac_number}} class="dropdown-item">{{ac_name}} <br>Ending in {{ac_ending}}</br> </button>
-                                                        {{/each }}
-                                                </div>
-                                        </div>
-                                    
-                                      
-                                </div>
+                                                                <div class="btn-group">
+                                                                        <button id="btn-bank-account1" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                                        Choose Your bank account
+                                                                        </button>
+                                                                        <div id="bank-dropdown-1" class="dropdown-menu">
+                                                                                {{#each bank_accounts }}
+                                                                                        <button type="button" value={{ac_number}} class="dropdown-item">{{ac_name}} <br>Ending in {{ac_ending}}</br> </button>
+                                                                                {{/each }}
+                                                                        </div>
+                                                                </div>
+                                                        </div>
 						</td> 
 						
 						<td> <i class="material-icons">arrow_forward</i> </td>
 
 						<td>
 							<div id="field-container" class="input-group">
-                                        <span class="input-group-addon"><i class="material-icons">account_balance</i></span>
-                                    
-                                        <input id="selected_bank_account2" name = "selected_bank_account2" type="text" class="form-control" hidden="true">
+                                                                <span class="input-group-addon"><i class="material-icons">account_balance</i></span>
+                                                        
+                                                                <input id="selected_bank_account2" name = "selected_bank_account2" type="text" class="form-control" hidden="true">
 
-                                         <div class="btn-group">
-                                                <button id="btn-bank-account2" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                  Choose Your bank account
-                                                </button>
-                                                <div id="bank-dropdown-2" class="dropdown-menu">
-                                                        {{#each bank_accounts }}
-                                                                <button type="button" value={{ac_number}} class="dropdown-item">{{ac_name}} <br>Ending in {{ac_ending}}</br> </button>
-                                                        {{/each }}
-                                                </div>
-                                        </div>
-                                    
-                                      
-                                </div>
+                                                                <div class="btn-group">
+                                                                        <button id="btn-bank-account2" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                                        Choose Your bank account
+                                                                        </button>
+                                                                        <div id="bank-dropdown-2" class="dropdown-menu">
+                                                                                {{#each bank_accounts }}
+                                                                                        <button type="button" value={{ac_number}} class="dropdown-item">{{ac_name}} <br>Ending in {{ac_ending}}</br> </button>
+                                                                                {{/each }}
+                                                                        </div>
+                                                                </div>
+                                                        </div>
 						</td>
 					</tr>
 
 				</table>
 
+                                <div class="date">
+                                        <label id = "label"for="dt" <i class="material-icons">date_range</i></label>
+	                                <input name="dt" type="date"/>
+                                </div>
                                 
-                                <button id="primary-button"  type="button" class="btn btn-primary">Save</button>
+                                <button id="primary-button"  type="submit" class="btn btn-primary">Save</button>
                                 
                             </form>
 
