Working on bank account deletion

--- a/views/bankac/add_bankac.handlebars
+++ b/views/bankac/add_bankac.handlebars
@@ -41,7 +41,7 @@
                             <input type="text" name="balance" class="form-control" placeholder="Account Balance"/>
                         </div>
                                 
-                        <button id="primary-buttonA"  type="button" class="btn btn-primary btn-lg btn-raised" data-toggle="modal" data-target=".bs-example-pop">ADD</button>
+                        <button id="primary-buttonA"  type="button" class="btn btn-primary btn-raised" data-toggle="modal" data-target=".bs-example-pop">ADD</button>
 
                         <div class="modal fade bs-example-pop">
                             <div class="modal-dialog">
