--- a/views/bankac/all_accounts.handlebars
+++ b/views/bankac/all_accounts.handlebars
@@ -36,14 +36,11 @@
                                 <div class="card__content">
                                     <div class="card__title">{{this.ac_name}}</div>
                                     <p class="acend"> ending in {{this.ac_ending}} </p>
-                                    <p> Account # : {{this.ac_number}} </p>
+                                    {{!-- <p> Account # : {{this.ac_number}} </p> --}}
                                     <p class="card__text">BALANCE:</p>
                                     <p> $ <b>{{this.ac_bal}}</b> </p>
                                     <a class="btn btn--block card__btn" href="/expenses/showAllExpenses">VIEW EXPENSES</a> 
-                                    <button class="btn-floating icon-gray" type="button" data-toggle="modal" data-target=".bs-example-pop">Delete</button>
-                                    {{!-- <div class="btnDel"> <i class=material-icons md-18>
-                                        <button id="primary-buttonD" class="btn-floating icon-gray" type="button" data-toggle="modal" data-target=".bs-example-pop">Delete</button>
-                                    </i></div> --}}
+                                    {{!-- <button class="btn-floating icon-gray" type="button" data-toggle="modal" data-target=".bs-example-pop">Delete</button>
 
                                     <div class="modal fade bs-example-pop">
                                         <div class="modal-dialog">
@@ -54,12 +51,12 @@
                                                 </div>
                                                 <div class="modal-body">
                                                     <p>Do you want to delete this account?</p>
-                                                    <p>(Click on the account number to confirm deletion)</p>
+                                                    <p>(Enter last 4 characters of the account number to confirm deletion)</p>
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <input type="submit" value="No" name="nob"></input>
-                                                    <input type="submit" value="Yes-{{this.ac_number}}" name="yesb"></input>
-                                                    <input type="text" value={{this.ac_number}} name="acn" disabled></input>
+                                                    <input type="submit" value="No" name="nob"/>
+                                                    <input type="submit" value="Yes" name="yesb"/>
+                                                    <input type="text" name="acn" placeholder="Last 4 characters"/>
                                                 </div>
                                             </div>
                                         </div>
@@ -84,14 +81,58 @@
                                                 modal.style.display = "none";
                                             }
                                         }
-                                    </script>
+                                    </script> --}}
 
                                 </div>
                             </div>
                         </li>
                         {{/each}}
                     </ul>
-                </form>
+                {{!-- </form> --}}
+                    <button class="btn-floating icon-gray" type="button" data-toggle="modal" data-target=".bs-example-pop">Delete Account</button>
+                                    
+                    <div class="modal fade bs-example-pop">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">CONFIRMATION</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Do you want to delete this account?</p>
+                                    <p>(Enter last 4 characters of the account number to confirm deletion)</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <input type="submit" value="No" name="nob"/>
+                                    <input type="submit" value="Yes" name="yesb"/>
+                                    <input type="text" name="acn" placeholder="Last 4 characters"/>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <script>
+                        var modal = document.getElementById("myModal");
+                        var btn = document.getElementById("primary-buttonD");
+                        var span = document.getElementsByClassName("close")[0];
+                        btn.onclick = function() {
+                            modal.style.display = "block";
+                        }
+
+                        // When the user clicks on <span> (x), close the modal
+                        span.onclick = function() {
+                            modal.style.display = "none";
+                        }
+
+                        // When the user clicks anywhere outside of the modal, close it
+                        window.onclick = function(event) {
+                            if (event.target == modal) {
+                                modal.style.display = "none";
+                            }
+                        }
+                    </script>
+                    </form>
+
             </div>
 
             {{!-- <div class="btnAdd"><i class="material-icons">
