--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
     <body>
       <div id = "header">
             <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-                    <a class="navbar-brand" href="/">Expense Manager</a>
+                    <a class="navbar-brand" href="/dashboard">Expense Manager</a>
             
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
