--- a/views/bankac/all_accounts.handlebars
+++ b/views/bankac/all_accounts.handlebars
@@ -36,60 +36,17 @@
                                 <div class="card__content">
                                     <div class="card__title">{{this.ac_name}}</div>
                                     <p class="acend"> ending in {{this.ac_ending}} </p>
-                                    {{!-- <p> Account # : {{this.ac_number}} </p> --}}
                                     <p class="card__text">BALANCE:</p>
                                     <p> $ <b>{{this.ac_bal}}</b> </p>
-                                    <a class="btn btn--block card__btn" href="/expenses/showAllExpenses">VIEW EXPENSES</a> 
-                                    {{!-- <button class="btn-floating icon-gray" type="button" data-toggle="modal" data-target=".bs-example-pop">Delete</button>
-
-                                    <div class="modal fade bs-example-pop">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title">CONFIRMATION</h5>
-                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <p>Do you want to delete this account?</p>
-                                                    <p>(Enter last 4 characters of the account number to confirm deletion)</p>
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <input type="submit" value="No" name="nob"/>
-                                                    <input type="submit" value="Yes" name="yesb"/>
-                                                    <input type="text" name="acn" placeholder="Last 4 characters"/>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <script>
-                                        var modal = document.getElementById("myModal");
-                                        var btn = document.getElementById("primary-buttonD");
-                                        var span = document.getElementsByClassName("close")[0];
-                                        btn.onclick = function() {
-                                            modal.style.display = "block";
-                                        }
-
-                                        // When the user clicks on <span> (x), close the modal
-                                        span.onclick = function() {
-                                            modal.style.display = "none";
-                                        }
-
-                                        // When the user clicks anywhere outside of the modal, close it
-                                        window.onclick = function(event) {
-                                            if (event.target == modal) {
-                                                modal.style.display = "none";
-                                            }
-                                        }
-                                    </script> --}}
+                                    <a class="btn btn--block card__btn" href="/expenses/showAllExpenses">VIEW EXPENSES</a>
 
                                 </div>
                             </div>
                         </li>
                         {{/each}}
                     </ul>
-                {{!-- </form> --}}
-                    <button class="btn-floating icon-gray" type="button" data-toggle="modal" data-target=".bs-example-pop">Delete Account</button>
+
+                    <button class="btn btnDel btn-danger btn-raised" type="button" data-toggle="modal" data-target=".bs-example-pop">Delete Account</button>
                                     
                     <div class="modal fade bs-example-pop">
                         <div class="modal-dialog">
@@ -131,13 +88,9 @@
                             }
                         }
                     </script>
-                    </form>
+                </form>
 
             </div>
-
-            {{!-- <div class="btnAdd"><i class="material-icons">
-                <a class="btn-floating btn-large" href="/bankac/addBankAC">add</a>
-            </i></div> --}}
         </div>
     </body>
     
