1. Update bank balance on adding income 2. Other transaction updates 3. Added zakaas background image ..lol

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -17,6 +17,10 @@
 
 .material-icons.md-36 { font-size: 36px; }
 
+body{
+    background-image: url('/public/imgs/background.jpg')
+}
+
 .account{
    float: right;
    padding: 40px;
