--- a/views/transactions/all_expenses.handlebars
+++ b/views/transactions/all_expenses.handlebars
@@ -12,7 +12,7 @@
     <body>
         
       
-        <div>
+        {{!-- <div>
             <a href="/expenses/addExpense">Click Here To Add Expense</a>
             <a>or</a>
             <a href="/income/addIncome">Click Here To Add Income</a>
@@ -22,7 +22,7 @@
             <a href="/bankac/addBankAC">Click Here To Add Accounts</a>
             <a>or</a>
             <a href="/dashboard">Click Here To Add Accounts</a>
-        </div>
+        </div> --}}
         
         <div id="expenses-card" class="card">
 
