--- a/views/transactions/all_income.handlebars
+++ b/views/transactions/all_income.handlebars
@@ -17,11 +17,11 @@
     <body>
         
       
-        <div>
+        {{!-- <div>
             <a href="/expenses/addExpense">Click Here To Add Expense</a>
             <a>or</a>
             <a href="/income/addIncome">Click Here To Add Income</a>
-        </div>
+        </div> --}}
         
         <div id="expenses-card" class="card">
 
