--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="/public/css/dashboard.css">
+         <script type="text/javascript" src="/public/js/lock.js"></script>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         
@@ -151,7 +152,14 @@
 
             </div>
 
+
         </div>
+         {{!-- <script type = "text/javascript" > 
+                function preventBack(){window.history.forward();} 
+                 setTimeout("preventBack()", 0); 
+                window.onunload=function(){null}; 
+         </script> --}}
+         
 
         
     </body>
