--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -58,7 +58,7 @@
                       </span> -->
 
                       <div class="btn-group pull-xs-right">
-                       <a class="sign-out" href="#">SIGN OUT</a>
+                       <a class="sign-out" href="/signout">SIGN OUT</a>
                            
                           </div>
 
