--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,6 +18,7 @@
 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
+      
 
         <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script> -->
         
@@ -25,6 +26,8 @@
     </head>
 
     <body>
+
+            
 
         {{{body}}}
         <div class="login form">
@@ -71,10 +74,18 @@
                                 
                                 </div>
 
+                   
+
                                 
                                
 
                         </form>
+
+                        <script type = "text/javascript" > 
+                                function preventBack(){window.history.forward();} 
+                                setTimeout("preventBack()", 0); 
+                                window.onunload=function(){null}; 
+                        </script>
 
                     </div>
 
