Updates in add bank account

--- a/views/bankac/add_bankac.handlebars
+++ b/views/bankac/add_bankac.handlebars
@@ -35,7 +35,7 @@
                         <div class="input-group">
                             <i class="material-icons">info</i>
                             {{!-- <label for="number" id="lab">Account Number:&nbsp;&nbsp;</label> --}}
-                            <input type="text" name="number" class="form-control" placeholder="Account Number"/>
+                            <input type="text" name="number" class="form-control" placeholder="Account Number (At-least 6 characters)"/>
                         </div>
                         <br>
                         <div class="input-group">
