working on update, delete expense, Calculating sum of transactions

--- a/views/bankac/all_accounts.handlebars
+++ b/views/bankac/all_accounts.handlebars
@@ -41,7 +41,7 @@
                                     <p class="acend"> ending in {{this.ac_ending}} </p>
                                     <p class="card__text">BALANCE:</p>
                                     <p> $ <b>{{this.ac_bal}}</b> </p>
-                                    <a class="btn btn--block card__btn" href="/expenses/showAllExpenses">VIEW EXPENSES</a>
+                                    <a class="btn btn--block card__btn" href="/expenses/showExpensesByBank/{{this.ac_number}}">VIEW EXPENSES</a>
 
                                 </div>
                             </div>
