--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -36,13 +36,13 @@
                             <h5 class="my-card-header-title">LOGIN</h5>
                     </div>
 
-                {{#if errors}}
+                {{!-- {{#if errors}}
                         {{#each errors}}
                                 <div class = "alert alert-danger">
                                 <strong>{{msg}}</strong>
                                 </div>
                         {{/each}}
-                    {{/if}}
+                    {{/if}} --}}
 
                     <div class="card-body">
                         <form method="post" action = "/">
