--- a/views/bankac/all_accounts.handlebars
+++ b/views/bankac/all_accounts.handlebars
@@ -70,7 +70,7 @@
                                 <div class="modal-footer">
                                     <input type="submit" value="No" name="nob"/>
                                     <input type="submit" value="Yes" name="yesb"/>
-                                    <input type="text" name="acn" placeholder="Last 4 characters"/>
+                                    <input type="text" name="acn" placeholder="Last 4 characters" required/>
                                 </div>
                             </div>
                         </div>
@@ -100,6 +100,11 @@
 
             </div>
         </div>
+        {{#if error}}
+        <div class="alert">
+            {{error}}
+        </div>
+        {{/if}}
     </body>
     
 </html>
