--- a/views/bankac/add_bankac.handlebars
+++ b/views/bankac/add_bankac.handlebars
@@ -51,7 +51,7 @@
                         <div class="input-group">
                             <i class="material-icons">attach_money</i>
                             {{!-- <label for="balance" id="lab">Current Balance:&nbsp;&nbsp;</label> --}}
-                            <input type="text" id="bankbalance" name="balance" class="form-control" placeholder="Account Balance" required = "" />
+                            <input type="number" step="0.01" id="bankbalance" name="balance" class="form-control" placeholder="Account Balance" required = "" />
                         </div>
                                 
                         <button id="primary-buttonA"  type="button" class="btn btn-primary btn-raised" data-toggle="modal" data-target=".bs-example-pop" >ADD</button>
