1. Get expenses by bank account 2. Get total income & expense and show it on dashboard 3. Other updates

--- a/public/css/all_expenses.css
+++ b/public/css/all_expenses.css
@@ -34,6 +34,17 @@ td{
 #edit{
     float: right;
 }
+
+.noSelect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
 /* 
 #navbar-navbar-expand-lg-sticky-top-navbar-dark-bg-dark{
    visibility: visible;
