--- a/views/transactions/all_expenses.handlebars
+++ b/views/transactions/all_expenses.handlebars
@@ -27,13 +27,13 @@
         <div id="expenses-card" class="card">
 
                         <div id="my-title-container" class="card-header">
-                          <h5 class="my-card-header-title">ALL EXPENSES</h5>
+                          <h5 class="my-card-header-title">{{title}}</h5>
                         </div>
 
                         <div class="card-body">
                             <div>
                                 {{#each expenses}}
-                                    <a href="/expenses/viewExpense/{{ _id }}" id="expense-item" class="list-group-item"> 
+                                    <a href="/expenses/viewExpense/{{ _id }}" id="expense-item" class="list-group-item noSelect"> 
                                         <i class="material-icons">{{category.icon_name}}</i>
                                         <div class="bmd-list-group-col">
                                             <p id="expense-desc" class="list-group-item-heading">{{desc}}</p>
